# bevy_quickmenu

./: Cargo.toml  Readme.md  icons.sketch
examples/: basic.rs  custom.rs  settings.rs
src/: helpers.rs  lib.rs  main.rs  menu.rs  navigation_menu.rs  settings.rs  style.rs  systems.rs  types.rs
src/widgets/: bordered_button.rs  button.rs  label.rs  mod.rs  vertical_menu.rs  widget.rs
